Bug 48947 - Spurious warning: [warn] worker [URL] used by another worker
Summary: Spurious warning: [warn] worker [URL] used by another worker
Status: RESOLVED FIXED
Alias: None
Product: Apache httpd-2
Classification: Unclassified
Component: mod_proxy (show other bugs)
Version: 2.2.3
Hardware: PC Mac OS X 10.4
: P2 normal (vote)
Target Milestone: ---
Assignee: Apache HTTPD Bugs Mailing List
URL:
Keywords:
: 44350 49708 (view as bug list)
Depends on:
Blocks:
 
Reported: 2010-03-19 15:12 UTC by Graham Leggett
Modified: 2018-02-25 21:13 UTC (History)
2 users (show)



Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Graham Leggett 2010-03-19 15:12:11 UTC
When a particularly backend URL is reverse proxied into the server two or more times, the following spurious warning is given:

[Fri Mar 19 13:52:59 2010] [warn] worker [URL] already used by another worker

As it is entirely valid to expose a backend server more than once in an URL space, this log statement should be reset to debug level.
Comment 1 Graham Leggett 2010-03-21 18:26:41 UTC
Patch applied to trunk, proposed for backport:

http://people.apache.org/~minfrin/httpd-proxy-worker-already-used.patch
Comment 2 Rainer Jung 2010-06-17 09:28:47 UTC
*** Bug 44350 has been marked as a duplicate of this bug. ***
Comment 3 Rainer Jung 2010-08-05 06:56:20 UTC
Applied as revision r962992 and released with 2.2.16.
Comment 4 Rainer Jung 2010-08-05 06:58:09 UTC
*** Bug 49708 has been marked as a duplicate of this bug. ***
Comment 5 Rainer Jung 2018-02-25 21:13:57 UTC
*** Bug 44350 has been marked as a duplicate of this bug. ***