mod_proxy: Tone down a warning message that appears when the same backend website is reverse proxied two or more times into the frontend URL space. PR: 48947

git-svn-id: https://svn.apache.org/repos/asf/httpd/httpd/trunk@925850 13f79535-47bb-0310-9956-ffa450edef68